# mesh-thumbnail

./: Cargo.toml
python/mesh_thumbnail/: __init__.py
src/: lib.rs  main.rs  parse_mesh.rs  python.rs  solid_material.rs
